--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div>
-            <img src="/IMG_20210309_235008 (2).jpg" alt="Profile">
+            <img src="\IMG_20210309_235008 (2).jpg" alt="Profile">
         </div>
     </header>
 
@@ -26,7 +26,7 @@
 
     <section>
         <div class="education">
-            <img src="/CSE.png" alt="">
+            <img src="\CSE.png" alt="">
             <h1>B.Tech</h1>
             <h2>Computer Science and Enginnering</h2>
             <h2>Siksha O Anusandhan University</h2>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="education">
-            <img src="/12.jpg" alt="">
+            <img src="\12.jpg" alt="">
             <h1>HSC</h1>
             <h2>Science (PCM)</h2>
             <h2>Kendriya Vidyalaya No 3</h2>
@@ -88,15 +88,15 @@
 
     <footer>
         <div>
-            <a href="https://www.facebook.com/prabhu.rout.144" target="-blank"><img src="/facebook.jpg" alt=""></a>
+            <a href="https://www.facebook.com/prabhu.rout.144" target="-blank"><img src="\facebook.jpg" alt=""></a>
             <h1>Facebook</h1>
         </div>
         <div>
-            <a href="https://www.linkedin.com/in/prabhu-rout-64a640172/" target="_blank"> <img src="/LinkdIn.jpg" alt=""></a>
+            <a href="https://www.linkedin.com/in/prabhu-rout-64a640172/" target="_blank"> <img src="\LinkdIn.jpg" alt=""></a>
             <h1>LinkdIn</h1>
         </div>
         <div>
-            <a href="https://github.com/PrabhuRout007" target="_blank"> <img src="/Github.jpg" alt=""></a>
+            <a href="https://github.com/PrabhuRout007" target="_blank"> <img src="\Github.jpg" alt=""></a>
             <h1>GitHub</h1>
         </div>
     </footer>
